// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label matches withError snapshot: with error mount 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
  border-left: 4px solid #b10e1e;
  margin-right: 15px;
  padding-left: 10px;
}

.emotion-1:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    max-width: 960px;
  }
}

.glamor-0,
[data-glamor-0] {
  margin-bottom: 0;
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    margin-bottom: 0;
  }
}

<glamorous(Label)
  error="example"
>
  <Label
    className="glamor-0"
    error="example"
  >
    <Styled(label)
      className="glamor-0"
      error="example"
    >
      <label
        className="glamor-0 glamor-1"
      >
        example
      </label>
    </Styled(label)>
  </Label>
</glamorous(Label)>
`;

exports[`Label matches wrapper snapshot: wrapper mount 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
}

.emotion-1:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    max-width: 960px;
  }
}

.glamor-0,
[data-glamor-0] {
  margin-bottom: 0;
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    margin-bottom: 0;
  }
}

<glamorous(Label)>
  <Label
    className="glamor-0"
  >
    <Styled(label)
      className="glamor-0"
    >
      <label
        className="glamor-0 glamor-1"
      >
        example
      </label>
    </Styled(label)>
  </Label>
</glamorous(Label)>
`;
